--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,6 +1,9 @@
+@import "_lib/base/colors";
+
 html, body{
   height: 100%;
-  background: #F4FAFA;
+  margin: 0;
+  background-color: lighten($primary-color, 40%);
   font-family: Arial, Helvetica, sans-serif;
 }
 button.active{
@@ -32,4 +35,18 @@ footer{
   align-items: center;
   justify-content: center;
   background: #fff;
+}
+
+app {
+  // override default color
+  md-toolbar.md-primary {
+    background-color: lighten($primary-color, 10%);
+  }
+}
+
+* {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
